--- a/.github/workflows/task1.yml
+++ b/.github/workflows/task1.yml
@@ -1,10 +1,33 @@
 name: Test Workflow
 
-on: push
+on:
+  push:
+    branches-ignore:
+      - main
+  workflow_dispatch:
 
 jobs:
-  checkout:
+  gradle-build:
     runs-on: ubuntu-latest
+    name: Gradle Build
     steps:
-      - name: Checkout this repository
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v4
+      - name: Run Gradle Build
+        run: |
+          echo "gradle --version"
+          echo "gradle check"
+
+
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: gradle-build
+    name: Docker Container Build
+    steps:
+      - name: Run Gradle Build
+        uses: ./.github/workflows/docker.yml
+        with:
+          app-name: ${{ vars.APP_NAME }}
+          app-id: ${{ vars.APP_ID }}
+          app-version: ${{ vars.APP_VERSION }}
+
